tests/ui/closures/2229_closure_analysis/wild_patterns.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/wild_patterns.rs:22:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/wild_patterns.rs:40:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/wild_patterns.rs:58:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/wild_patterns.rs:25:5
   |
LL | /     || {
LL | |
LL | |
LL | |         // FIXME(arora-aman): Change `_x` to `_`
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> ImmBorrow
  --> $DIR/wild_patterns.rs:29:37
   |
LL |         let Point { x: _x, y: _ } = p;
   |                                     ^

error: Min Capture analysis includes:
  --> $DIR/wild_patterns.rs:25:5
   |
LL | /     || {
LL | |
LL | |
LL | |         // FIXME(arora-aman): Change `_x` to `_`
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture p[(0, 0)] -> ImmBorrow
  --> $DIR/wild_patterns.rs:29:37
   |
LL |         let Point { x: _x, y: _ } = p;
   |                                     ^

error: First Pass analysis includes:
  --> $DIR/wild_patterns.rs:43:5
   |
LL | /     || {
LL | |
LL | |
LL | |         // FIXME(arora-aman): Change `_x` to `_`
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0)] -> ByValue
  --> $DIR/wild_patterns.rs:47:23
   |
LL |         let (_x, _) = t;
   |                       ^

error: Min Capture analysis includes:
  --> $DIR/wild_patterns.rs:43:5
   |
LL | /     || {
LL | |
LL | |
LL | |         // FIXME(arora-aman): Change `_x` to `_`
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/wild_patterns.rs:47:23
   |
LL |         let (_x, _) = t;
   |                       ^

error: First Pass analysis includes:
  --> $DIR/wild_patterns.rs:61:5
   |
LL | /     || {
LL | |
LL | |
LL | |         // FIXME(arora-aman): Change `_x` to `_`
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing arr[Index] -> ByValue
  --> $DIR/wild_patterns.rs:65:23
   |
LL |         let [_x, _] = arr;
   |                       ^^^

error: Min Capture analysis includes:
  --> $DIR/wild_patterns.rs:61:5
   |
LL | /     || {
LL | |
LL | |
LL | |         // FIXME(arora-aman): Change `_x` to `_`
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture arr[] -> ByValue
  --> $DIR/wild_patterns.rs:65:23
   |
LL |         let [_x, _] = arr;
   |                       ^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0658`.
